--- a/BlueMS/src/main/res/layout-land/fragment_eviromental_sensors.xml
+++ b/BlueMS/src/main/res/layout-land/fragment_eviromental_sensors.xml
@@ -35,7 +35,6 @@
   ~ OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
   ~ OF SUCH DAMAGE.
   -->
-
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -45,295 +44,165 @@
     tools:context="com.st.BlueMS.demos.EnvironmentalSensorsFragment">
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineVertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guidelineVerticalFirstQuarter"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.25" />
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guidelineVerticalCenter"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guidelineVerticalTherdQuarter"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.50" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/guidelineHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.50" />
 
-    <ImageView
-        android:id="@+id/thermometerImage"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/thermometerCard"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@drawable/temperature_icon"
-        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
+        app:layout_constraintRight_toLeftOf="@id/guidelineVertical"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalFirstQuarter"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal" />
+        android:layout_margin="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/thermometerText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/sensorNotAvailable"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalFirstQuarter"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalCenter"
-        app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/thermometerImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/temperature_icon" />
+            <TextView
+                android:id="@+id/thermometerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:text="@string/sensorNotAvailable"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/barometerImage"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/barometerCard"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalFirstQuarter"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
-        app:srcCompat="@drawable/pressure_icon" />
-
-    <TextView
-        android:id="@+id/barometerText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/sensorNotAvailable"
-        android:textAlignment="center"
-        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalFirstQuarter"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalCenter"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
+        app:layout_constraintRight_toLeftOf="@id/guidelineVertical"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/luminosityImage"
+            <ImageView
+                android:id="@+id/barometerImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/pressure_icon" />
+            <TextView
+                android:id="@+id/barometerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:text="@string/sensorNotAvailable"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/humidityCard"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@drawable/illuminance_icon"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalTherdQuarter"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalCenter" />
-
-    <TextView
-        android:id="@+id/luminosityText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/sensorNotAvailable"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/luminosityImage"
+        app:layout_constraintLeft_toLeftOf="@id/guidelineVertical"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/humidityImage"
+            <ImageView
+                android:id="@+id/humidityImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/humidity_icon" />
+            <TextView
+                android:id="@+id/humidityText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:textAlignment="center"
+                android:layout_gravity="center"
+                android:text="@string/sensorNotAvailable"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/luminosityCard"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalCenter"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalTherdQuarter"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
-        app:srcCompat="@drawable/humidity_icon" />
-
-    <TextView
-        android:id="@+id/humidityText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/sensorNotAvailable"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalTherdQuarter"
+        app:layout_constraintLeft_toRightOf="@id/guidelineVertical"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
+        tools:layout_editor_absoluteX="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/luminosityImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:src="@drawable/illuminance_icon" />
+
+            <TextView
+                android:id="@+id/luminosityText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:text="@string/sensorNotAvailable"
+                android:textAlignment="center"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.st.BlueMS.demos.EnvironmentalSensorsFragment" android:orientation="vertical">
-
-<LinearLayout android:layout_height="match_parent"
-              android:layout_width="match_parent"
-              android:layout_weight="1"
-              android:baselineAligned="false"
-              android:orientation="horizontal">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_weight="1">
-
-        <ImageView
-            android:id="@+id/thermometerImage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center|start"
-            android:layout_marginEnd="20dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/temperature_icon" />
-
-        <TextView
-
-            android:id="@+id/thermometerText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/sensorNotAvailable"
-            android:textSize="22sp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:layout_weight="1">
-
-        <ImageView
-            android:id="@+id/luminosityImage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center|start"
-            android:layout_marginEnd="20dp"
-            android:layout_weight="0.8"
-            app:srcCompat="@drawable/illuminance_icon"/>
-
-        <TextView
-            android:id="@+id/luminosityText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/sensorNotAvailable"
-            android:textSize="22sp"/>
-
-    </LinearLayout>
-</LinearLayout>
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_weight="1">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_weight="1">
-
-        <ImageView
-            android:id="@+id/barometerImage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginEnd="20dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/pressure_icon"/>
-
-        <TextView
-            android:id="@+id/barometerText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:gravity="center"
-            android:text="@string/sensorNotAvailable"
-            android:layout_weight="1"
-            android:textSize="22sp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/humidityImage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center|start"
-            android:layout_marginEnd="20dp"
-            android:layout_weight="0.8"
-            app:srcCompat="@drawable/humidity_icon"/>
-
-        <TextView
-            android:id="@+id/humidityText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/sensorNotAvailable"
-            android:textSize="22sp"/>
-
-    </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
-    -->
