--- a/BlueMS/src/main/res/values/fragment_bluevoice_fullband.xml
+++ b/BlueMS/src/main/res/values/fragment_bluevoice_fullband.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2018  STMicroelectronics – All rights reserved
+  ~ Copyright (c) 2017  STMicroelectronics – All rights reserved
   ~ The STMicroelectronics corporate logo is a trademark of STMicroelectronics
   ~
   ~ Redistribution and use in source and binary forms, with or without modification,
