Second stage updating to ST BLE Sensor V5.1.0
Signed-off-by: Luca Pezzoni <luca.pezzoni@st.com>

--- a/st_textual_monitor/src/main/res/layout/textual_monitor_fragment.xml
+++ b/st_textual_monitor/src/main/res/layout/textual_monitor_fragment.xml
@@ -81,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
+            android:text="Serial Console Output:\n"
             android:textSize="12sp" />
     </ScrollView>
 </LinearLayout>
