--- a/st_plot/src/main/res/layout/chart_fragment.xml
+++ b/st_plot/src/main/res/layout/chart_fragment.xml
@@ -5,68 +5,100 @@
   ~ the root directory of this software component.
   ~ If no LICENSE file comes with this software, it is provided AS-IS.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/plotFeature_demo_hor_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/plotFeature_featureSelector"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/plotFeature_startPlotButton"
+            style="@style/IconButton"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            app:icon="@drawable/ic_play"
+            app:iconPadding="0dp"
+            android:layout_marginEnd="4dp"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/plotFeature_demo_button_serial_console"
+            style="@style/IconButton"
+            android:layout_width="0dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_height="match_parent"
+            app:icon="@drawable/baseline_terminal_24"
+            android:layout_weight="1"
+            app:iconPadding="0dp" />
+    </LinearLayout>
+
+    <LinearLayout
+    android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:orientation="horizontal">
 
     <com.st.ui.legacy.VerticalTextView
         android:id="@+id/plotFeature_yLabel"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+            android:layout_height="match_parent"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/plotFeature_chart"
-        app:layout_constraintEnd_toStartOf="@+id/plotFeature_chart"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/plotFeature_chart"
         tools:text="YLabel" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/plotFeature_startPlotButton"
-        style="@style/IconButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:icon="@drawable/ic_play"
-        app:iconPadding="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/plotFeature_featureSelector"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/plotFeature_chart"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/plotFeature_featureValue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/plotFeature_yLabel"
-        app:layout_constraintTop_toBottomOf="@+id/plotFeature_startPlotButton"
-        app:layout_constraintVertical_bias="0.0">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     </com.github.mikephil.charting.charts.LineChart>
 
-    <Spinner
-        android:id="@+id/plotFeature_featureSelector"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/plotFeature_startPlotButton"
-        app:layout_constraintEnd_toStartOf="@+id/plotFeature_startPlotButton"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/plotFeature_featureValue"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:ellipsize="end"
         android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/plotFeature_yLabel"
         tools:text="Feature Value" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/plotFeature_serial_console_scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/Grey2"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:fadeScrollbars="false"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp">
+
+        <TextView
+            android:id="@+id/plotFeature_serial_console_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="Serial Console Output:\n"
+            android:textSize="12sp" />
+    </ScrollView>
+</LinearLayout>
